# devy

./: .dockerignore  .gitignore  ARCHITECTURE.d2  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  devy.toml  docker-compose.yaml  fly.api.toml  fly.frontend.toml  fly.toml  otel-local-config.yaml  package-lock.json  package.json  version
api/: Cargo.toml  Dockerfile  Rocket.toml  fly.toml  sqlx-data.json
api/queries/: blog_get_by_slug.sql  blog_get_by_username.sql  post_get_by_blog_slug_and_post_slug.sql
api/src/: auth.rs  config.rs  db.rs  main.rs
apps/devy-api/: Cargo.toml  Dockerfile  fly.toml
apps/devy-uploader/: Cargo.toml  Dockerfile
backend/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  Secrets.dev.toml  api.yaml  blog.rs  query  run-query  seed.sql  sqlx-data.json  temp.sql
backend/.sqlx/: query-07a0b4b47f627b2288dfc4454130e230deff6484c1c37fdbc337d87b3ac5e125.json  query-0d1a6ff92b7501f7490f1126f2882da63909dcb0cbc569abe5181c16c37e6d1f.json  query-14d8fe9b1053a3f0288217be9f5db2156746ffdfd4775d450fdb76e67e0cfc66.json  query-1a886c2692de6d567c8f17145c17f24e4f94a99bac2f38c39ccf26ef9d655602.json  query-1c04ff7369690eb85fbad159330117c810cd63a56e9571d0286f6c01d30d2842.json  query-1e15fb1f58cb3d59ed3dabf1aaa505107f71061198e23a53d363fea1055563b0.json  query-1e29cf16d6d4a2d04fc4ba872aaefe3783a18a5b304c413fbd578d51034200fb.json  query-244af0d4ea614bcaf90c60e322e6c88b77796e0666c007e382f3138e8696cc5d.json  query-2497c5966b8c8956cf06b331348094be5dcab4a49616783e3c2f306c85e21606.json  query-29d62000162f23418594fd9d2cda94546d2b74dbe91a46754b362508d006cdfd.json  query-33d3a485a42a958a2a2ba5aecef8ead01261a125aadabba81cd6e434b18894f1.json  query-3985f42bcc8052ab3e66d2f58c17271850367caf9154a832fd9e9277cc79cc05.json  query-3ad2f244468a0e868d78ee03925198af567c92a72b7001cec17404dcecf857a0.json  query-422506fb2aff4fb57776b2ece81cacf69175731f352f62f713e0e6c9c38fbda4.json  query-4e761b66f767e80328fee5a05a17683b83227cc970191da7a65bed45ebd97262.json  query-57e6de3eb880aea61da1180e65038d497bc8848bb3fdf0112d6a37282df8a607.json  query-5bafff08683adb66c20a2c79f3e181885af4487f924da525fe92f9f377278f57.json  query-64afe088486cf32dad06658b1f179fcc788e0994ca2c9ac16420efb260583a20.json  query-658767aee9245659c4666b73e8f00c0365870a7beaa38471a2c3f495ea49b902.json  query-7318ce874d686536be6b07f478f5c16872f8bc22cb8abdc990d20b94aade8999.json  query-771a0414be383ffd9e843a3315f09843cad0219baf668b026eb54f359d6b65a0.json  query-77f843aa170f6c1d2d1fb027ea57fb164ca4ce1be11faba2b94c84d27854ccaf.json  query-7aeb3b06f53e7635bbc0c787c786d74b977e51f831ca3801a1c5f159e5b304ca.json  query-818d3e9972dd25aae9c3ea5292146aed1f7d143add18a6c3786cec358bbd059a.json  query-8844188638b5ecbfef195333488a90b355f1b80f38de1aa9eee4fc3ced937abe.json  query-8f80a82341e1f6cf1b9842c1469c5faa9f6d8d63d770183ae4e671166294b7dc.json  query-9f48ed99d83bd0ade009b4923ff204900dd40d64758a7d64f84af8f860a6e38e.json  query-9fb91316203a9e97657a3124cb200ad839ab1c1d090d7f566e76163e6cd42da0.json  query-a497b4d5f40e74cf0047e1b411b4142a8db6f7b3fa64d8e0918cf0a5335caf84.json  query-a5165e7ba83ce12988933f4ff64f1637242dbbfb6b4d2c384b1971be9666a6e4.json  query-a9d7552acfa2f60c739e52dc8d583019ba7e751be9cee36a226373f58d155a17.json  query-b2bb8b990031e66b6e7ccab6b5e91b075b1a30daac8a4fcc09c55bcb5b10ba6a.json  query-b3c7c44562511ff9a8b132fefd44f5389157cc6fbb876b8571d1cc22323736c1.json  query-b575f13c52bf168d6c1b209b135e653a3a25cd9d320d29f55739a7ba66093967.json  query-bc73a2b50e81cf704b873130268ec47a7077f8f921316fba84d3f3db23c118bf.json  query-c0509033ca55174d4025bd97fe5bd0c9a8e2ac32354f1a49864f2e0c14a2ee12.json  query-c42e46fdbdfad2aac2a592a0467b2d9a34d4ec27fc50f9deb6fabd1f2744359f.json  query-c7e82912e41caf938e669289ee7c3626972db7f7e0cb469aa4a41a4b739b1514.json  query-c83c91804d8a6ced6f2b62b70cc578e6795c1437fe36adcf6dccc6177b89d446.json  query-ca0423cf993a880a6d2011f71d95fa1ed85e2449a327414d4150508f035bb2f4.json  (+11 more)
backend/api/: Cargo.toml  Dockerfile
backend/database/: Dockerfile
backend/devyctl/: Cargo.toml
backend/lib/: Cargo.toml
backend/migrations/: 0000_install_extensions.sql  0001_create_user_table.sql  0002_create_blog_table.sql  0002_create_profile_table.sql  0003_create_profile_table.sql  0004_create_post_table.sql  0005_create_tag_table.sql  0006_create_post_tag_join_table.sql  0007_create_like_table.sql  0008_create_bookmark_table.sql  0009_create_feed_table.sql  0010_create_upload_table.sql  0011_create_webhook_table.sql  0012_require_profile_user_id_is_unique.sql  0014_rename_feed_to_feed_config.sql
backend/queries/: blog_delete_by_slug.sql  blog_get_by_id.sql  blog_get_by_slug.sql  blog_upsert.sql  feed_config_get_by_id.sql  like_post_ids_get_by_username.sql  post_get_by_blog_slug.sql  post_get_by_blog_slug_and_post_slug.sql  post_get_by_feed_new.sql  post_get_by_feed_popular.sql  post_get_by_id.sql  post_get_by_username.sql  post_get_liked_by_username.sql  profile_get_by_slug.sql  profile_get_by_username.sql  upload_get_by_id.sql  user_get_by_github_username.sql  user_get_by_username.sql  user_upsert.sql
backend/seed/: seed_00_users.sql  seed_04_likes.sql
backend/src/: auth.rs  config.rs  db.rs  git.rs  main.rs  router.rs  routes.rs  store.rs  uploader.rs
crates/api/: Cargo.toml
crates/auth/: Cargo.toml
crates/forms/: Cargo.toml
crates/router/: Cargo.toml
crates/upload/: Cargo.toml
crates/uploader/: Cargo.toml
crates/uploads/: Cargo.toml
db/: Cargo.toml  Dockerfile
db/.sqlx/: query-1305b72bacba34e1fbeac9ebd85a7bbf407664036505b2d6730b7b311543273f.json  query-192bc5e6d8cfdc037e4db28e8302025ccb9f13fc550e135116e7cf43c47719ea.json  query-2937e080f73edac10e72e0a9dbd19aa8ba323e0e45ed88a103f082e98ed91728.json  query-35369773cc7ed58dee462bd00c911f78f21f52eded5040f8e04e5a1806bf0abe.json  query-37cc78101ff8144cb3c0ef0d4432739d6f044990bae14b6a216a6b634750fe6a.json  query-47bea479b3490f5cf470472b1a57067c86e8fb19ad1b1bd98ffea258a85475d1.json  query-4fe02e360ad4f87c3c000e8df1922926813eb388560bdeeed30b83d003ef0d8e.json  (+14 more)
db/seed/: seed_03_posts.sql
devyctl/: .env  Cargo.toml
lib/: Cargo.toml
(+2688 files in other folders)
