[package]
name = "api"
version = "0.2.0"
edition = "2021"

[dependencies]
lib = { path = "../lib" }

dotenvy = "0.15.7"
axum = "0.7.4"
cookie = "0.18.1"
http = "1.0.0"
serde_json = "1.0.116"
serde_derive = "1.0.198"
uuid = "1.9.1"
serde_with = "3.8.1"
derive_more = "0.99.17"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
version = "1.28.2"
features = ["full"]

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.reqwest]
version = "0.12.1"
features = ["json"]

[dependencies.sqlx]
version = "^0.7.1"
features = [
    "postgres",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "uuid",
    "time",
]
