[package]
name = "devy-backend"
version = "0.3.6"
edition = "2021"

[dependencies]
axum = "0.7.1"
oauth2 = "4.4.1"
chrono = "0.4.26"
jsonwebtoken = "8"
json = "0.12.4"
anyhow = "1.0"
http = "1.0.0"
serde_with = "3.3.0"
tracing = "0.1.40"
dotenvy = "0.15.7"
tracing-honeycomb = "0.4.1"
serde_json = "1.0.108"
glob = "0.3.1"
regex = "1.10.2"
hyper = "1.0.1"
http-body = "1.0.0"
async-trait = "0.1.74"

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies.tracing-subscriber]
version = "0.3.17"
features = [ "env-filter",]

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.reqwest]
version = "0.11.20"
features = [ "json",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.tokio]
version = "1.28.2"
features = [ "full",]

[dependencies.sqlx]
version = "^0.7.1"
features = [ "postgres", "macros", "migrate", "runtime-tokio-rustls", "uuid", "time",]

[dependencies.uuid]
version = "1.5.0"
features = [ "v4", "fast-rng", "macro-diagnostics", "serde",]
