[package]
name = "db"
version = "0.4.0"
edition = "2021"

[dependencies]
entities = { path = "../crates/entities" }

serde_with = "3.3.0"
serde_json = "1.0.108"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "^0.7.1"
features = [
  "postgres",
  "macros",
  "migrate",
  "runtime-tokio-rustls",
  "uuid",
  "time",
]

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
