[package]
name = "devyctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }

clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"

[dependencies.tokio]
version = "1.28.2"
features = ["full"]
