[package]
name = "devyctl"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../lib" }
dotenvy = "0.15.7"
serde_json = "1.0.132"
anyhow = "1.0.93"
csv = "1.3.0"
clap = { version = "4.5.20", features = ["derive"] }

[dependencies.tokio]
version = "1.28.2"
features = ["full"]

[dependencies.reqwest]
version = "0.12.1"
features = ["json"]

[dependencies.serde]
features = ["derive"]
version = "1.0"
