[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"


[dependencies]
oauth2 = "4.4.2"
rand = "0.8.5"
tracing = "0.1.40"
slugify = "0.1.0"
url = "2.5.0"
axum = "0.7.4"
jsonwebtoken = "9.2.0"
http = "1.0.0"
serde_with = "3.6.1"
cookie = "0.18.0"
serde_json = "1.0.116"
serde_derive = "1.0.198"
regex = "1.10.4"
openssl = "0.10.64"
derive_more = "0.99.17"

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.reqwest]
version = "0.12.1"
features = ["json"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

[dependencies.tokio]
version = "1.28.2"
features = ["full"]

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.sqlx]
version = "^0.7.1"
features = [
    "postgres",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "uuid",
    "time",
]
