[package]
name = "devy-api"
version = "0.3.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
lib = { path = "../../lib" }
dotenvy = "0.15.7"
axum = "0.7.4"
cookie = "0.18.1"
http = "1.0.0"
serde_json = "1.0.116"
serde_derive = "1.0.198"
uuid = "1.9.1"
serde_with = "3.8.1"
derive_more = "0.99.17"
anyhow = "1.0.86"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "uuid",
    "time",
] }

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
version = "1.28.2"
features = ["full"]

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.reqwest]
version = "0.12.1"
features = ["json"]
