[package]
name = "devy-uploader"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
lib = { path = "../../lib" }
serde_json = "1.0.116"
serde_derive = "1.0.198"
derive_more = "0.99.17"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "uuid",
    "time",
] }
tracing = "0.1.40"
slugify = "0.1.0"
dotenvy = "0.15.7"
rand = "0.8.5"

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
version = "1.28.2"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]
