[package]
name = "api"
version = "0.2.0"
edition = "2021"

[dependencies]
auth = { path = "../auth/" }
router = { path = "../router/" }
store = { path = "../store/" }
db = { path = "../db/" }
monitoring = { path = "../monitoring/" }
uploads = { path = "../uploads/" }

dotenvy = "0.15.7"

[dependencies.tokio]
version = "1.28.2"
features = ["full"]
