[package]
name = "auth"
version = "0.3.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
entities = { path = "../entities" }

oauth2 = "4.4.2"
rand = "0.8.5"
tracing = "0.1.40"

[dependencies.reqwest]
version = "0.11.20"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
