[package]
name = "forms"
version = "0.1.0"
edition = "2021"


[dependencies]
db = { path = "../db" }
entities = { path = "../entities" }
serde_with = "3.3.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
