[package]
name = "router"
version = "0.3.1"
edition = "2021"


[dependencies]
entities = { path = "../entities" }
store = { path = "../store" }
auth = { path = "../auth" }
db = { path = "../db" }
forms = { path = "../forms" }
uploads = { path = "../uploads" }

axum = "0.7.4"
jsonwebtoken = "9.2.0"
http = "1.0.0"
serde_with = "3.6.1"
cookie = "0.18.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.28.2"
features = ["full"]

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
