[package]
name = "router"
version = "0.5.0"
edition = "2021"


[dependencies]
db = { path = "../../db" }
auth = { path = "../auth" }
entities = { path = "../entities" }
forms = { path = "../forms" }
store = { path = "../store" }
uploads = { path = "../uploads" }

axum = "0.7.4"
jsonwebtoken = "9.2.0"
http = "1.0.0"
serde_with = "3.6.1"
cookie = "0.18.0"
serde_json = "1.0.116"
serde_derive = "1.0.198"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.28.2"
features = ["full"]

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
