[package]
name = "upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "../entities" }

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
