[package]
name = "uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../../db" }
entities = { path = "../entities" }
monitoring = { path = "../monitoring" }

tokio = { version = "1.37.0", features = ["full"] }
serde_derive = "1.0.197"
serde_json = "1.0.115"
glob = "0.3.1"
regex = "1.10.4"
slugify = "0.1.0"

[dependencies.reqwest]
version = "0.11.20"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dependencies.sqlx]
version = "^0.7.1"
features = [
    "postgres",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "uuid",
    "time",
]
