[package]
name = "uploads"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
entities = { path = "../entities" }

serde_derive = "1.0.197"
serde_json = "1.0.115"
glob = "0.3.1"

[dependencies.reqwest]
version = "0.11.20"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
